Had random white space seperating html and body content. Fixed random margin issue on body.

--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
 }
 
+body{
+    margin: 0;
+}
 
 .hero {
     height: 100vh;
